--- a/react/package.json
+++ b/react/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.6.11",
+    "@vercel/analytics": "^1.5.0",
     "@xyflow/react": "^12.4.4",
     "framer-motion": "^12.4.10",
     "react": "^19.0.0",
